Closed Bug 1377920 Opened 7 years ago Closed 7 years ago

Too many warnings: WARNING: 'obs', file ../mozilla/image/RasterImage.cpp Line 1402, etc. during FULL DEBUG version of C-C TB |make mozmill| test.

Categories

(Core :: Graphics: ImageLib, defect)

x86_64
Linux
defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla56
Tracking Status
firefox56 --- fixed

People

(Reporter: ishikawa, Assigned: mak)

References

Details

Attachments

(1 file)

(I said the platform is linux x86_64, but I suspect it can be any platform.)

I noticed that there are many warnings lines in one of the forms
during running |make mozmill| test of FULL DEBUG build of  C-C TB.

[5101] WARNING: 'obs', file /NREF-COMM-CENTRAL/comm-central/mozilla/image/RasterImage.cpp, line 1402
 [5101] WARNING: 'obs', file /NREF-COMM-CENTRAL/comm-central/mozilla/image/ImageFactory.cpp, line 99
 [5101] WARNING: 'obs', file /NREF-COMM-CENTRAL/comm-central/mozilla/image/VectorImage.cpp, line 1032

I suspect these warnings are also observed by M-C FF test. If not, then there must be a subtle difference between how C-C TB and M-C FF calls graphics functions.

The warning lines are too numerous and actually hinder debugging when I run the 
FULL DEBUG version of C-C TB on my local PC's terminal console.
The warning lines basically moves other interesting warning/dump lines off the screen too quickly.

I am not even sure what 'obs' means.

Anyway, I have not noticed this issue  about a week ago, and only noticed the issue after refreshing the source code on the weekend.

TIA
This is quite annoying when running tests, 80% of the output is these warnings.
the code also looks wrong

if (NS_WARN_IF(obs)) {

I suspect the intent was the opposite, to warn if obs was not defined?
Assignee: nobody → mak77
Status: NEW → ASSIGNED
Comment on attachment 8883288 [details]
Bug 1377920 - Too many WARNING: 'obs' from imagelib in debug builds.

https://reviewboard.mozilla.org/r/154206/#review159334
Attachment #8883288 - Flags: review?(aosmond) → review+
Pushed by mak77@bonardo.net:
https://hg.mozilla.org/integration/autoland/rev/5bfa0808e8d9
Too many WARNING: 'obs' from imagelib in debug builds. r=aosmond
https://hg.mozilla.org/mozilla-central/rev/5bfa0808e8d9
Status: ASSIGNED → RESOLVED
Closed: 7 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla56
Next time please properly block this bug with the bug that caused the problem (it should be very easy to find in searchfox) and cc the author/reviewer. We just did the same work in bug 1377923.
Blocks: 1363059
(In reply to Johann Hofmann [:johannh] from comment #7)
> Next time please properly block this bug with the bug that caused the
> problem (it should be very easy to find in searchfox) and cc the
> author/reviewer. We just did the same work in bug 1377923.

good point, on the other side the other bug was filed later, and someone should have looked for dupes :(
(In reply to Johann Hofmann [:johannh] from comment #7)
> Next time please properly block this bug with the bug that caused the
> problem (it should be very easy to find in searchfox) and cc the
> author/reviewer. We just did the same work in bug 1377923.

Sorry for my ignorance, but what is searchfox [I will google it], but if it is so good then
why on earth it is NOT used for the search box for bugzilla? inquiring mind wants to know.

TIA
http://searchfox.org/ is just a service to search in the mozilla codebase, it also gives the blame information for each line.
So it was potentially possible to check the blame for the rows specified in the warning, and figure out which bug introduced those warnings.
Fwiw, I don't think you did anything wrong!
(In reply to Marco Bonardo [::mak] from comment #11)
> http://searchfox.org/ is just a service to search in the mozilla codebase,
> it also gives the blame information for each line.
> So it was potentially possible to check the blame for the rows specified in
> the warning, and figure out which bug introduced those warnings.
> Fwiw, I don't think you did anything wrong!

Thank you for the clarification. Yes, I did not find any related bugzilla entries when I searched for the issue when I filed the bugzilla entry. Now I can find three closed bugzilla entries.

Just a side note: I suspect that many would-be reporters of a bug/feature issue to bugzilla are discouraged to report
a bugzilla when they noticed that a colon in "WARNING: 'obs', file ..." is considered to introduce a field search for WARNING field, and the semantics of quotes, say ' and/or " is not quite obvious, etc.
We probably need a better front end for the novice users for simple string search.
But again this is a side note and should be discussed elsewhere.

BTW, I found 'searchfox' a good frontend for dxr.mozilla.org for searching for blame. One less click to search for and unlike the dxr tool, the display mode does not change due to the clicking on "blame" button, etc.
Too bad it is only for mozilla-central. :-(
It's all good. I don't think blocking the regressing bug is an obligation of the bug author. In my experience, when fixing/investigating regressions I come across blame info quite quickly. Then, my first reaction is to set the correct blocking bug and cc the people who were involved.

I was just pointing out that this is a good practice that we should try to follow in the future, which I assume you both agree with. I didn't mean to blame anyone. Thanks for reporting and fixing this bug. :)
(I thought I replied to this post, but obviously it somehow did not get posted properly.)

(In reply to Johann Hofmann [:johannh] from comment #13)
> It's all good. I don't think blocking the regressing bug is an obligation of
> the bug author. In my experience, when fixing/investigating regressions I
> come across blame info quite quickly. 
This shows that you are a very experienced mozilla contributor ! :-)

> Then, my first reaction is to set the
> correct blocking bug and cc the people who were involved.
I see.
> 
> I was just pointing out that this is a good practice that we should try to
> follow in the future, which I assume you both agree with. 
Yes, I agree.

"searchfox" is a nice tool to find "blame" on M-C tree.
Too bad, it does not seem to support C-C tree.

> I didn't mean to
> blame anyone. Thanks for reporting and fixing this bug. :)
No hard feeling. Like I said, as far as M-C tree goes, I think I can use "searchfox" to my advantage.
It is just that if I report a new bug only in several weeks apart, my memory fails :-)

TIA
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: