Bug 1377920 - Too many WARNING: 'obs' from imagelib in debug builds. r=aosmond

MozReview-Commit-ID: 5Rt7VUYpOmt