image/VectorImage.cpp
@@ -1029,7 +1029,8 @@ VectorImage::Show(gfxDrawable* aDrawable, const SVGDrawingParameters& aParams)
   // Record the image drawing for startup performance testing.
   if (NS_IsMainThread()) {
     nsCOMPtr<nsIObserverService> obs = services::GetObserverService();
-    if (NS_WARN_IF(obs)) {
+    NS_WARNING_ASSERTION(obs, "Can't get an observer service handle");
+    if (obs) {
       nsCOMPtr<nsIURI> imageURI = mURI->ToIURI();
       nsAutoCString spec;
       imageURI->GetSpec(spec);
